testsuite/tests/deriving/should_fail/T1133Aa.hs
module T1133Aa where

import {-# SOURCE #-} T1133A
